headers/RadarKit/RKFoundation.h

// Ray
size_t RKRayBufferAlloc(RKBuffer *, const uint32_t capacity, const uint32_t count);
void RKRayBufferFree(RKBuffer);
RKRay *RKGetRayFromBuffer(RKBuffer, const uint32_t);
uint8_t *RKGetUInt8DataFromRay(RKRay *, const RKProductIndex);
float *RKGetFloatDataFromRay(RKRay *, const RKProductIndex);
int RKClearRayBuffer(RKBuffer buffer, const uint32_t);
RKRay *RKGetVacantRayFromBuffer(RKBuffer, uint32_t *, const uint32_t);
// Standalone file monitor (one file per thread)
RKFileMonitor *RKFileMonitorInit(const char *filename, void (*)(void *), void *);
int RKFileMonitorFree(RKFileMonitor *);
// Stream symbols / binary
RKStream RKStreamFromString(const char *);
char *RKStringOfStream(RKStream);
int RKStringFromStream(char *, RKStream);
//int RKGetNextProductDescription(char *symbol, char *name, char *unit, char *colormap, RKProductIndex *, RKProductList *);
RKProductDesc RKGetNextProductDescription(RKProductList *);
// Parser, enum, strings
size_t RKParseCommaDelimitedValues(void *, RKValueType , const size_t, const char *);
size_t RKParseNumericArray(void *, RKValueType, const size_t, const char *);
void RKParseQuotedStrings(const char *source, ...);
void RKMakeJSONStringFromControls(char *, RKControl *, uint32_t count);
// RKStatusEnum RKValueToEnum(RKConst value, RKConst tlo, RKConst lo, RKConst nlo, RKConst nhi, RKConst hi, RKConst thi);
RKStatusEnum RKValueToEnum(RKConst value, RKConst tlo, RKConst lo, RKConst hi, RKConst thi);
RKStatusEnum RKStatusFromTemperatureForCE(RKConst value);
RKStatusEnum RKStatusFromTemperatureForIE(RKConst value);
RKStatusEnum  RKStatusFromTemperatureForComputers(RKConst value);
bool RKFindCondition(const char *, const RKStatusEnum, const bool, char *firstKey, char *firstValue);
bool RKAnyCritical(const char *, const bool, char *firstKey, char *firstValue);
int RKParseProductDescription(RKProductDesc *, const char *);
RKProductId RKProductIdFromString(const char *);
RKIdentifier RKIdentifierFromString(const char *);
// Simple engine
int RKSimpleEngineFree(RKSimpleEngine *);
// FIFO command queue
RKCommandQueue *RKCommandQueueInit(const uint16_t, const bool);
RKCommand *RKCommandQueuePop(RKCommandQueue *);
int RKCommandQueuePush(RKCommandQueue *, RKCommand *);
int RKCommandQueueFree(RKCommandQueue *);
// RKPedestalActionString
char *RKPedestalActionString(const RKScanAction *);