python/src/radarkit/_ctypes_.py


# RKFoundation.h: 186
if _libs["radarkit"].has("RKRayBufferAlloc", "cdecl"):
    RKRayBufferAlloc = _libs["radarkit"].get("RKRayBufferAlloc", "cdecl")
    RKRayBufferAlloc.argtypes = [POINTER(RKBuffer), uint32_t, uint32_t]
    RKRayBufferAlloc.restype = c_size_t

# RKFoundation.h: 187
if _libs["radarkit"].has("RKRayBufferFree", "cdecl"):
    RKRayBufferFree = _libs["radarkit"].get("RKRayBufferFree", "cdecl")
    RKRayBufferFree.argtypes = [RKBuffer]
    RKRayBufferFree.restype = None

# RKFoundation.h: 188
if _libs["radarkit"].has("RKGetRayFromBuffer", "cdecl"):
    RKGetRayFromBuffer = _libs["radarkit"].get("RKGetRayFromBuffer", "cdecl")
    RKGetRayFromBuffer.argtypes = [RKBuffer, uint32_t]
    RKGetRayFromBuffer.restype = POINTER(RKRay)

# RKFoundation.h: 189
if _libs["radarkit"].has("RKGetUInt8DataFromRay", "cdecl"):
    RKGetUInt8DataFromRay = _libs["radarkit"].get("RKGetUInt8DataFromRay", "cdecl")
    RKGetUInt8DataFromRay.argtypes = [POINTER(RKRay), RKProductIndex]
    RKGetUInt8DataFromRay.restype = POINTER(uint8_t)

# RKFoundation.h: 190
if _libs["radarkit"].has("RKGetFloatDataFromRay", "cdecl"):
    RKGetFloatDataFromRay = _libs["radarkit"].get("RKGetFloatDataFromRay", "cdecl")
    RKGetFloatDataFromRay.argtypes = [POINTER(RKRay), RKProductIndex]
    RKGetFloatDataFromRay.restype = POINTER(c_float)

# RKFoundation.h: 191
if _libs["radarkit"].has("RKClearRayBuffer", "cdecl"):
    RKClearRayBuffer = _libs["radarkit"].get("RKClearRayBuffer", "cdecl")
    RKClearRayBuffer.argtypes = [RKBuffer, uint32_t]
    RKClearRayBuffer.restype = c_int

# RKFoundation.h: 192
if _libs["radarkit"].has("RKGetVacantRayFromBuffer", "cdecl"):
    RKGetVacantRayFromBuffer = _libs["radarkit"].get("RKGetVacantRayFromBuffer", "cdecl")
    RKGetVacantRayFromBuffer.argtypes = [RKBuffer, POINTER(uint32_t), uint32_t]
    RKGetVacantRayFromBuffer.restype = POINTER(RKRay)

# RKFoundation.h: 195
if _libs["radarkit"].has("RKFileMonitorInit", "cdecl"):
    RKFileMonitorInit = _libs["radarkit"].get("RKFileMonitorInit", "cdecl")
    RKFileMonitorInit.argtypes = [String, CFUNCTYPE(UNCHECKED(None), POINTER(None)), POINTER(None)]
    RKFileMonitorInit.restype = POINTER(RKFileMonitor)

# RKFoundation.h: 196
if _libs["radarkit"].has("RKFileMonitorFree", "cdecl"):
    RKFileMonitorFree = _libs["radarkit"].get("RKFileMonitorFree", "cdecl")
    RKFileMonitorFree.argtypes = [POINTER(RKFileMonitor)]
    RKFileMonitorFree.restype = c_int

# RKFoundation.h: 199
if _libs["radarkit"].has("RKStreamFromString", "cdecl"):
    RKStreamFromString = _libs["radarkit"].get("RKStreamFromString", "cdecl")
    RKStreamFromString.argtypes = [String]
    RKStreamFromString.restype = RKStream

# RKFoundation.h: 200
if _libs["radarkit"].has("RKStringOfStream", "cdecl"):
    RKStringOfStream = _libs["radarkit"].get("RKStringOfStream", "cdecl")
    RKStringOfStream.argtypes = [RKStream]
    if sizeof(c_int) == sizeof(c_void_p):
        RKStringOfStream.restype = ReturnString
    else:
        RKStringOfStream.restype = String
        RKStringOfStream.errcheck = ReturnString

# RKFoundation.h: 201
if _libs["radarkit"].has("RKStringFromStream", "cdecl"):
    RKStringFromStream = _libs["radarkit"].get("RKStringFromStream", "cdecl")
    RKStringFromStream.argtypes = [String, RKStream]
    RKStringFromStream.restype = c_int

# RKFoundation.h: 203
if _libs["radarkit"].has("RKGetNextProductDescription", "cdecl"):
    RKGetNextProductDescription = _libs["radarkit"].get("RKGetNextProductDescription", "cdecl")
    RKGetNextProductDescription.argtypes = [POINTER(RKProductList)]
    RKGetNextProductDescription.restype = RKProductDesc

# RKFoundation.h: 206
if _libs["radarkit"].has("RKParseCommaDelimitedValues", "cdecl"):
    RKParseCommaDelimitedValues = _libs["radarkit"].get("RKParseCommaDelimitedValues", "cdecl")
    RKParseCommaDelimitedValues.argtypes = [POINTER(None), RKValueType, c_size_t, String]
    RKParseCommaDelimitedValues.restype = c_size_t

# RKFoundation.h: 207
if _libs["radarkit"].has("RKParseNumericArray", "cdecl"):
    RKParseNumericArray = _libs["radarkit"].get("RKParseNumericArray", "cdecl")
    RKParseNumericArray.argtypes = [POINTER(None), RKValueType, c_size_t, String]
    RKParseNumericArray.restype = c_size_t

# RKFoundation.h: 208
if _libs["radarkit"].has("RKParseQuotedStrings", "cdecl"):
    _func = _libs["radarkit"].get("RKParseQuotedStrings", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [String]
    RKParseQuotedStrings = _variadic_function(_func,_restype,_argtypes,_errcheck)

# RKFoundation.h: 209
if _libs["radarkit"].has("RKMakeJSONStringFromControls", "cdecl"):
    RKMakeJSONStringFromControls = _libs["radarkit"].get("RKMakeJSONStringFromControls", "cdecl")
    RKMakeJSONStringFromControls.argtypes = [String, POINTER(RKControl), uint32_t]
    RKMakeJSONStringFromControls.restype = None

# RKFoundation.h: 210
if _libs["radarkit"].has("RKValueToEnum", "cdecl"):
    RKValueToEnum = _libs["radarkit"].get("RKValueToEnum", "cdecl")
    RKValueToEnum.argtypes = [RKConst, RKConst, RKConst, RKConst, RKConst, RKConst, RKConst]
    RKValueToEnum.restype = RKStatusEnum

# RKFoundation.h: 211
if _libs["radarkit"].has("RKStatusFromTemperatureForCE", "cdecl"):
    RKStatusFromTemperatureForCE = _libs["radarkit"].get("RKStatusFromTemperatureForCE", "cdecl")
    RKStatusFromTemperatureForCE.argtypes = [RKConst]
    RKStatusFromTemperatureForCE.restype = RKStatusEnum

# RKFoundation.h: 212
if _libs["radarkit"].has("RKStatusFromTemperatureForIE", "cdecl"):
    RKStatusFromTemperatureForIE = _libs["radarkit"].get("RKStatusFromTemperatureForIE", "cdecl")
    RKStatusFromTemperatureForIE.argtypes = [RKConst]
    RKStatusFromTemperatureForIE.restype = RKStatusEnum

# RKFoundation.h: 213
if _libs["radarkit"].has("RKStatusFromTemperatureForComputers", "cdecl"):
    RKStatusFromTemperatureForComputers = _libs["radarkit"].get("RKStatusFromTemperatureForComputers", "cdecl")
    RKStatusFromTemperatureForComputers.argtypes = [RKConst]
    RKStatusFromTemperatureForComputers.restype = RKStatusEnum

# RKFoundation.h: 214
if _libs["radarkit"].has("RKFindCondition", "cdecl"):
    RKFindCondition = _libs["radarkit"].get("RKFindCondition", "cdecl")
    RKFindCondition.argtypes = [String, RKStatusEnum, c_bool, String, String]
    RKFindCondition.restype = c_bool

# RKFoundation.h: 215
if _libs["radarkit"].has("RKAnyCritical", "cdecl"):
    RKAnyCritical = _libs["radarkit"].get("RKAnyCritical", "cdecl")
    RKAnyCritical.argtypes = [String, c_bool, String, String]
    RKAnyCritical.restype = c_bool

# RKFoundation.h: 216
if _libs["radarkit"].has("RKParseProductDescription", "cdecl"):
    RKParseProductDescription = _libs["radarkit"].get("RKParseProductDescription", "cdecl")
    RKParseProductDescription.argtypes = [POINTER(RKProductDesc), String]
    RKParseProductDescription.restype = c_int

# RKFoundation.h: 217
if _libs["radarkit"].has("RKProductIdFromString", "cdecl"):
    RKProductIdFromString = _libs["radarkit"].get("RKProductIdFromString", "cdecl")
    RKProductIdFromString.argtypes = [String]
    RKProductIdFromString.restype = RKProductId

# RKFoundation.h: 218
if _libs["radarkit"].has("RKIdentifierFromString", "cdecl"):
    RKIdentifierFromString = _libs["radarkit"].get("RKIdentifierFromString", "cdecl")
    RKIdentifierFromString.argtypes = [String]
    RKIdentifierFromString.restype = RKIdentifier

# RKFoundation.h: 221
if _libs["radarkit"].has("RKSimpleEngineFree", "cdecl"):
    RKSimpleEngineFree = _libs["radarkit"].get("RKSimpleEngineFree", "cdecl")
    RKSimpleEngineFree.argtypes = [POINTER(RKSimpleEngine)]
    RKSimpleEngineFree.restype = c_int

# RKFoundation.h: 224
if _libs["radarkit"].has("RKCommandQueueInit", "cdecl"):
    RKCommandQueueInit = _libs["radarkit"].get("RKCommandQueueInit", "cdecl")
    RKCommandQueueInit.argtypes = [uint16_t, c_bool]
    RKCommandQueueInit.restype = POINTER(RKCommandQueue)

# RKFoundation.h: 225
if _libs["radarkit"].has("RKCommandQueuePop", "cdecl"):
    RKCommandQueuePop = _libs["radarkit"].get("RKCommandQueuePop", "cdecl")
    RKCommandQueuePop.argtypes = [POINTER(RKCommandQueue)]
    RKCommandQueuePop.restype = POINTER(RKCommand)

# RKFoundation.h: 226
if _libs["radarkit"].has("RKCommandQueuePush", "cdecl"):
    RKCommandQueuePush = _libs["radarkit"].get("RKCommandQueuePush", "cdecl")
    RKCommandQueuePush.argtypes = [POINTER(RKCommandQueue), POINTER(RKCommand)]
    RKCommandQueuePush.restype = c_int

# RKFoundation.h: 227
if _libs["radarkit"].has("RKCommandQueueFree", "cdecl"):
    RKCommandQueueFree = _libs["radarkit"].get("RKCommandQueueFree", "cdecl")
    RKCommandQueueFree.argtypes = [POINTER(RKCommandQueue)]
    RKCommandQueueFree.restype = c_int

# RKFoundation.h: 230
if _libs["radarkit"].has("RKPedestalActionString", "cdecl"):
    RKPedestalActionString = _libs["radarkit"].get("RKPedestalActionString", "cdecl")
    RKPedestalActionString.argtypes = [POINTER(RKScanAction)]
    if sizeof(c_int) == sizeof(c_void_p):
        RKPedestalActionString.restype = ReturnString
    else:
        RKPedestalActionString.restype = String
        RKPedestalActionString.errcheck = ReturnString

# RKConfig.h: 14
if _libs["radarkit"].has("RKConfigBufferAlloc", "cdecl"):
    RKConfigBufferAlloc = _libs["radarkit"].get("RKConfigBufferAlloc", "cdecl")
    RKConfigBufferAlloc.argtypes = [POINTER(POINTER(RKConfig)), uint32_t]
    RKConfigBufferAlloc.restype = c_size_t

# RKConfig.h: 15
if _libs["radarkit"].has("RKConfigBufferFree", "cdecl"):
    RKConfigBufferFree = _libs["radarkit"].get("RKConfigBufferFree", "cdecl")
    RKConfigBufferFree.argtypes = [POINTER(RKConfig)]
    RKConfigBufferFree.restype = None

# RKConfig.h: 17
if _libs["radarkit"].has("RKConfigAdvanceEllipsis", "cdecl"):
    _func = _libs["radarkit"].get("RKConfigAdvanceEllipsis", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [POINTER(RKConfig), POINTER(uint32_t), uint32_t]
    RKConfigAdvanceEllipsis = _variadic_function(_func,_restype,_argtypes,_errcheck)

# RKConfig.h: 18
if _libs["radarkit"].has("RKConfigAdvance", "cdecl"):
    RKConfigAdvance = _libs["radarkit"].get("RKConfigAdvance", "cdecl")
    RKConfigAdvance.argtypes = [POINTER(RKConfig), POINTER(uint32_t), uint32_t, c_void_p]
    RKConfigAdvance.restype = None

# RKConfig.h: 21
if _libs["radarkit"].has("RKConfigWithId", "cdecl"):
    RKConfigWithId = _libs["radarkit"].get("RKConfigWithId", "cdecl")
    RKConfigWithId.argtypes = [POINTER(RKConfig), uint32_t, uint64_t]
    RKConfigWithId.restype = POINTER(RKConfig)

fftwf_complex = c_float * int(2)# /usr/include/fftw3.h: 466

# /usr/include/fftw3.h: 466
class struct_fftwf_plan_s(Structure):
    pass

fftwf_plan = POINTER(struct_fftwf_plan_s)# /usr/include/fftw3.h: 466

RKWindowType = c_int# headers/RadarKit/RKWindow.h: 14

# RKDSP.h: 25
class struct_rk_fft_resource(Structure):
    pass

struct_rk_fft_resource.__slots__ = [
    'size',
    'count',
    'forwardInPlace',
    'forwardOutPlace',
    'backwardInPlace',
    'backwardOutPlace',
]
struct_rk_fft_resource._fields_ = [
    ('size', c_uint),
    ('count', c_uint),
    ('forwardInPlace', fftwf_plan),
    ('forwardOutPlace', fftwf_plan),
    ('backwardInPlace', fftwf_plan),
    ('backwardOutPlace', fftwf_plan),
]

RKFFTResource = struct_rk_fft_resource# RKDSP.h: 25

# RKDSP.h: 34
class struct_rk_fft_module(Structure):
    pass

struct_rk_fft_module.__slots__ = [
    'name',
    'verbose',
    'exportWisdom',
    'count',
    'wisdomFile',
    'plans',
]
struct_rk_fft_module._fields_ = [
    ('name', RKName),
    ('verbose', c_int),
    ('exportWisdom', c_bool),
    ('count', c_uint),
    ('wisdomFile', c_char * int(1024)),
    ('plans', POINTER(RKFFTResource)),
]

RKFFTModule = struct_rk_fft_module# RKDSP.h: 34

# RKDSP.h: 40
class struct_rk_gaussian(Structure):
    pass

struct_rk_gaussian.__slots__ = [
    'A',
    'mu',
    'sigma',
]
struct_rk_gaussian._fields_ = [
    ('A', RKFloat),
    ('mu', RKFloat),
    ('sigma', RKFloat),
]
